#212 fix layout issue with managing categories when editing content node (#213)

--- a/admin/assets/less/admin-controls.less
+++ b/admin/assets/less/admin-controls.less
@@ -749,9 +749,6 @@ div#panel-extendedattributes a {
     .categoryAssignment li ul {
         margin: 0 !important;
     }
-    .bigui__wrapper{
-        overflow: visible;
-    }
     .mura-grid {
         li {
             float: none;
